# python-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: check.yaml  lint.yaml  release.yaml  test.yaml
