# Package specification, as defined here:
# https://packaging.python.org/en/latest/specifications/pyproject-toml/#pyproject-toml-spec

[build-system]
requires = ["setuptools", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools]
packages = ["src"]

[project]
name = "python_template"
version = "0.0.0"
# dynamic = ["version"]
description = "python-template..."
readme = "README.md"
authors = [{ name = "Lukas Twist", email = "itsluketwist@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["python-template"]
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/itsluketwist/python-template"
